Backported fix to stable branch

BUG:232757

svn path=/branches/kmymoney/4.5/; revision=1170521